crates/loxide_interpreter/tests/snapshots/integration@if__dangling_else.snap
---
source: crates/loxide_interpreter/tests/integration.rs
expression: result
---
// A dangling else binds to the right-most if.
if (true) if (false) print "bad"; else print "good"; // expect: good
// => str(good)
if (false) if (true) print "bad"; else print "bad";
