crates/loxide_interpreter/tests/snapshots/integration@if__else.snap
---
source: crates/loxide_interpreter/tests/integration.rs
expression: result
---
// Evaluate the 'else' expression if the condition is false.
if (true) print "good"; else print "bad"; // expect: good
// => str(good)
if (false) print "bad"; else print "good"; // expect: good
// => str(good)

// Allow block body.
if (false) nil; else { print "block"; } // expect: block
// => str(block)
