crates/loxide_interpreter/tests/snapshots/integration@if__fun_in_else.snap
---
source: crates/loxide_interpreter/tests/integration.rs
expression: result
snapshot_kind: text
---
// [line 2] Error at 'fun': Expect expression.
if (true) "ok"; else fun foo() {}


>>>>> Error Section <<<<<

  × Expected token `primary expression`, found keyword
   ╭─[2:22]
 1 │ // [line 2] Error at 'fun': Expect expression.
 2 │ if (true) "ok"; else fun foo() {}
   ·                      ─┬─
   ·                       ╰── expected `primary expression`, found keyword
   ╰────
