crates/loxide_interpreter/tests/snapshots/integration@if__fun_in_then.snap
---
source: crates/loxide_interpreter/tests/integration.rs
expression: result
snapshot_kind: text
---
// [line 2] Error at 'fun': Expect expression.
if (true) fun foo() {}


>>>>> Error Section <<<<<

  × Expected token `primary expression`, found keyword
   ╭─[2:11]
 1 │ // [line 2] Error at 'fun': Expect expression.
 2 │ if (true) fun foo() {}
   ·           ─┬─
   ·            ╰── expected `primary expression`, found keyword
   ╰────
