crates/loxide_interpreter/tests/snapshots/integration@if__var_in_else.snap
---
source: crates/loxide_interpreter/tests/integration.rs
expression: result
snapshot_kind: text
---
// [line 2] Error at 'var': Expect expression.
if (true) "ok"; else var foo;


>>>>> Error Section <<<<<

  × Expected token `primary expression`, found keyword
   ╭─[2:22]
 1 │ // [line 2] Error at 'var': Expect expression.
 2 │ if (true) "ok"; else var foo;
   ·                      ─┬─
   ·                       ╰── expected `primary expression`, found keyword
   ╰────
