crates/loxide_interpreter/tests/snapshots/integration@if__var_in_then.snap
---
source: crates/loxide_interpreter/tests/integration.rs
expression: result
---
// [line 2] Error at 'var': Expect expression.
if (true) var foo;


>>>>> Error Section <<<<<
  × Expected token `primary expression`, found keyword
   ╭─[2:11]
 1 │ // [line 2] Error at 'var': Expect expression.
 2 │ if (true) var foo;
   ·           ─┬─
   ·            ╰── expected `primary expression`, found keyword
   ╰────
